syntax = "proto3";

package fibonacci;

option go_package = "fibonacci/fibonacci";

service FibonacciService {
    rpc GetFibonacci (FibonacciRequest) returns (FibonacciResponse);
}

message FibonacciRequest {
    int32 number = 1;
}

message FibonacciResponse {
    repeated int32 sequence = 1;
}